--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Xit-Essentials
+name: Midka
 version: ${project.version}
 main: dev.midka.eka.Eka
 api-version: 1.16
@@ -11,3 +11,5 @@ commands:
     aliases: lch
   doctor:
   godboots:
+  destinyspear:
+    aliases: dspear
